--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
 
 <!--<app-tdd-example03></app-tdd-example03>-->
 
-<app-reactive-forms-example01></app-reactive-forms-example01>
+<!--<app-reactive-forms-example01></app-reactive-forms-example01>-->
+
+<app-reactive-forms-example02></app-reactive-forms-example02>
